# simba

./: .gitignore  README.md  explain_all_local.py  kfold_job  phl_job  phl_sol_bf_job  phl_sol_job  pyproject.toml  test.py  wa_job  wa_sol_bf_job-Copy1  wa_sol_cc_job
src/simba.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/simba/cli/: main.py
src/simba/data/: __init__.py  adapters.py  instance_index.py
src/simba/explain/: __init__.py  perturbations.py  simba.py  simba_explainer.py  utils.py
src/simba/models/: __init__.py  adp_r18.py  biasfield_resnet.py  coordRegressor.py  coordconv_resnet.py  geoconv.py  resnet18.py  tang2015.py
src/simba/training/: trainer.py
src/simba/utils/: utils.py
