[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simba"
version = "0.1.0"
description = "SIMBA: Spatial Imprecision & Model Behavior Analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Heather Baier" }]
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "numpy",
  "pandas",
  "scipy",
  "geopandas>=0.14",
  "shapely>=2.0",
  "scikit-learn",
  "matplotlib",
  "tqdm",
  "pyyaml",
  "typer>=0.12.0"
]

[project.scripts]
simba = "simba.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
