[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simba"
version = "0.1.0"
description = "SIMBA: Spatial Imprecision & Model Behavior Analysis"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Heather Baier" }]
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "numpy",
  "pandas",
  "scipy",
  "geopandas",
  "shapely",
  "rasterio",
  "rioxarray",
  "scikit-learn",
  "scikit-learn",
  "matplotlib",
  "tqdm",
  "pyyaml",
  "typer",
  "haversine"
]


   


[project.scripts]
simba = "simba.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
